# xcp-ng-tests

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  config-schema.json  config.toml  conftest.py  data.py-dist  jobs.py  main.infra.py  mise.toml  pkgfixtures.py  pyproject.toml  pytest.ini  pytest_features.py  setup.cfg  test.py  test_cephfs_sr.py  test_cross_pool_live_storage_migration.py  test_ext_sr.py  test_ext_sr_multihost.py  test_update_host.py  test_xfs_sr.py  test_xfs_sr_multihost.py  test_zfs_sr.py  test_zfs_sr_multihost.py  tools.py  vm_data.py-dist
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: code-checkers.yml  docker.yml  format.yml  jobs-check.yml  main.yml  requirements-check.yml  test-sequences.yml  unit.yml  zizmor.yml
compat_kit/: Dockerfile  README.md  __init__.py  entrypoint.py  id_ed25519  id_ed25519.pub
contrib/varstored/: dbx_poison.auth
infra/: __init__.py  cli.py  task_update.py
lib/: __init__.py  basevm.py  blktap.py  bond.py  commands.py  common.py  config.py  config_loader.py  cpu_policy.py  efi.py  fistpoint.py  host.py  installer.py  logging.py  netutil.py  network.py  pif.py  pool.py  pxe.py  serial_console_logger.py  snapshot.py  sr.py  tunnel.py  typing.py  unixvm.py  vbd.py  vdi.py  vif.py  vlan.py  vm.py  windowsvm.py  xo.py
lib/distros/: __init__.py  alma.py  alpine.py  centos.py  debian.py  freebsd.py  opensuse.py  ubuntu.py
lib/tools/: __init__.py  cli.py  inventory.py
lib/windows/: __init__.py  guest_tools.py  other_tools.py
packer/: README.md  alpine-3.23-uefi.pkr.hcl
packer/http_files/: answers.txt
packer/scripts/: cleanup.sh
requirements/: base.txt  dev.txt
scripts/: README.md  capture-console.py  extract-log.py  gen-indirect-installs.sh  gen-ref-installs  get_xva_bridge.sh  install_xcpng.py  lib.bash  list.sh  migrate_data_py.py  runtests-get-fsdiff-ref  runtests-install  runtests-postinstall  runtests-postrestore  runtests-postupgrade  runtests-upgrade  scan_cache.py  set_xva_bridge.sh  test-ssh-public-key-auth.sh  tools.py  update_xcnpg.py  xcpng-fs-diff.py  xva_bridge.py
scripts/ansible/: runner.py
scripts/stuff/: XenAPI.py  fix-efivars  gen-sbvar  secureboot-certs
tests/air_gapped/: test_air_gapped_update.py
tests/fs-diff/: test_fsdiff_ref.py
tests/fs_diff/: test_fs_diff.py
tests/ha/: conftest.py  ha.py  test_ha.py
tests/host_sb/: test_hypercall_filter.py
tests/install/: README.md  conftest.py  test.py  test_fixtures.py  test_nested.py  test_pool.py
tests/installer/: active_services_821.txt  conftest.py  inactive_services_821.txt  test_install_xcpng.py
tests/limits/: conftest.py  test_hvm_vcpu_limit.py  (+2 more)
tools/: Makefile
(+304 files in other folders)
