[project]
name = "xcp-ng-tests"
version = "0.1.0"
description = "Testing scripts for XCP-ng"
readme = "README.md"
requires-python = "~=3.8"

dynamic = ["dependencies", "optional-dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements/base.txt"]}
optional-dependencies = {dev = { file = ["requirements/dev.txt"] }}

[tool.pyright]
typeCheckingMode = "standard"
