[project]
name = "xcp-ng-tests"
version = "0.1.0"
description = "Testing scripts for XCP-ng"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "cryptography>=3.3.1",
    "gitpython",
    "legacycrypt",
    "packaging>=20.7",
    "pluggy>=1.1.0",
    "pytest>=8.0.0",
    "pytest-dependency",
    "requests",
]

[dependency-groups]
dev = [
    "ansible>=5.0.1",
    "bs4>=0.0.1",
    "mypy",
    "flake8",
    "pydocstyle",
    "pyright",
    "pyyaml>=6.0",
    "ruff",
    "types-requests",
    "typing-extensions",
]

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
preview = true
line-length = 120
exclude = ["data.py", "vm_data.py", ".git"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = [
  "F",  # Pyflakes
  "I",  # isort
  "SLF",  # flake8-self
  "SIM",  # flake8-simplify
]
# don't use some of the SIM rules
ignore = [
  "SIM105",  # suppressible-exception
  "SIM108",  # if-else-block-instead-of-if-exp
]

[tool.ruff.lint.extend-per-file-ignores]
# pytest requires some import and function arguments to match, but
# the linter doesn't know that
"tests/**/*.py" = [
  "F401",  # F401 unused-import
  "F811",  # F811 redefined-while-unused
]

[tool.ruff.lint.isort.sections]
testing = ["pytest*"]
typing = ["typing"]

[tool.ruff.lint.isort]
lines-after-imports = 1
section-order = [
    "future",
    "typing",
    "testing",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
